# agentic-org

./: .dockerignore  .env.c6z.example  .env.example  .gcloudignore  .gitignore  .impeccable.md  .pre-commit-config.yaml  AUDIT_REPORT_2026-04-01.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.tei.baked  Dockerfile.ui  Dockerfile.ui.cloudrun  ENTERPRISE_READINESS_PLAN.md  QA_MANUAL_TEST_PLAN.md  README.md  RELEASE_SIGNOFF_CA_FIRMS_AISHWARYA_2026-04-22.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_2026-04-19.md  alembic.ini  cloudbuild-api.yaml  cloudbuild-tei-baked.yaml  cloudbuild-tei-mirror.yaml  cloudbuild-ui.yaml  cloudbuild.ui.cloudrun.yaml  comparison.html  coverage_report.json  docker-compose.local-e2e.yml  docker-compose.yml  launchTweet.md  prod_test_sweep.py  pyproject.toml  requirements-dev.txt  requirements-v4.txt  requirements.txt
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
api/: __init__.py  deps.py  error_handlers.py  main.py  route_metadata.py
audit/: __init__.py  dsar.py  evidence_package.py  signer.py  writer.py
auth/: __init__.py  aa_callback_signing.py  csrf.py  csrf_middleware.py  grantex.py  grantex_middleware.py  grantex_registration.py  jwt.py  middleware.py  one_time_codes.py  opa.py  scopes.py  token_pool.py
bridge/: __init__.py  cli.py  server_handler.py  state.py  tally_bridge.py
config/: public_claim_registry.json
connectors/: __init__.py  catalog_meta.py  registry.py
core/: __init__.py  agent_generator.py  async_redis.py  auth_state.py  config.py  crypto.py  database.py  email.py  embeddings.py  embeddings_backfill.py  explainer.py  feature_flags.py  gmail_agent.py  http_retry.py  kpi_cache.py  live_feed.py  rbac.py  seed_ca_demo.py  seed_demo_data.py  seed_knowledge.py  seed_tenant.py  workflow_ab.py  workflow_generator.py
demos/: __init__.py  commerce_sales_agent_demo.py
docs/: AGENT_MATURITY_MATRIX.md  AgenticOrg_Complete_User_Guide_v5.0.html  BACKUP_AND_DR.md  BRUTAL_SECURITY_AUDIT_PLAN_2026-06-13.md  BUG_FIX_SUMMARY_MARCH2026.md  BUG_SWEEP_24APR.md  BUG_SWEEP_24APR_AUTOPSY.md  CA_CMO_CONNECTOR_USER_GUIDE_2026-05-30.md  CMO_VENDOR_SANDBOX_QA_FLOW.md  CODE_AUDIT_2026-04-01.md  CODE_REVIEW_SUMMARY_2026-04-14.md  COMPLETE_WORK_SUMMARY_APR2026.md  DPDP_ACT.md  ENTERPRISE_END_TO_END_GAP_ANALYSIS_2026-04-30.md  ENTERPRISE_GAP_ANALYSIS_2026-04-12.md  ENTERPRISE_GAP_ANALYSIS_RECHECK_2026-04-12.md  ENTERPRISE_READINESS_CHECKLIST.md  ENTERPRISE_REMAINING_GAPS_IMPLEMENTATION_PLAN_2026-04-12.md  ENTERPRISE_STABILITY_STATUS_2026-05-16.md  ENTERPRISE_V4_7_0_SUMMARY.md  ENTERPRISE_V4_8_0_SUMMARY.md  FIXES_SUMMARY_2026-05-02.md  FUNCTIONAL_REVIEW_2026-04-13.md  GDPR.md  HIPAA.md  LIVE_PACKS_CA_E2E_VALIDATION_2026-04-12.md  PACKS_CA_REMEDIATION_2026-04-13.md  PENTEST_SCHEDULE.md  PERFORMANCE.md  PRD.md  PRD_CxO_v5.0.md  PRD_v4.0.0.md  PRODUCT_GAP_REVIEW_2026-04-18.md  PRODUCT_GAP_REVIEW_2026-04-19.md  PROJECT_REVIEW_2026-04-14.md  PR_SUMMARY_CA_COMPANY_OWNERSHIP_2026-04-13.md  PR_SUMMARY_CA_PACK_E2E_HARDENING_2026-04-13.md  PR_SUMMARY_PACKS_CA_FIXES_2026-04-12.md  PR_SUMMARY_PRODUCTION_ROLLOUT_FIX_2026-04-13.md  RELEASE_GAP_STATUS_2026-04-24.md  (+70 more)
evals/: runner.py  scorecard.json  scorer.py
helm/: Chart.yaml  values-airgap.yaml  values-lean.yaml  values-production.yaml  values-staging.yaml  values.yaml
infra/: gcp-setup-lean.sh
mcp-server/: CHANGELOG.md  README.md  package-lock.json  package.json  server.json
migrations/: 001_extensions.sql  002_core.sql  003_operational.sql  004_scaling.sql  005_rls.sql  006_partitions.sql  007_virtual_employees.sql  008_sales_pipeline.sql  009_org_hierarchy.sql  010_org_level.sql  011_api_keys.sql  012_v4_columns.sql  013_company_model.sql  014_ca_features.sql  015_ca_phase2.sql  016_cxo_platform.sql  README.md  env.py
observability/: __init__.py  alerting.py  langsmith.py  metrics.py  tracing.py
rpa/: __init__.py  egress_guard.py
scaling/: __init__.py  agent_factory.py  cost_ledger.py  hpa_integration.py  lifecycle.py  shadow_comparator.py
schemas/: asset.schema.json  campaign.schema.json  compliance_filing.schema.json  contract.schema.json  custom_fields_extension.schema.json  employee.schema.json  incident.schema.json  invoice.schema.json  job_requisition.schema.json  journal_entry.schema.json  lead.schema.json  order.schema.json  payment.schema.json  payroll_run.schema.json  product.schema.json  ticket.schema.json  training_record.schema.json  vendor.schema.json
scripts/: __init__.py  _gen_cafirms_may01_xlsx.py  _gen_session5_summaries.py  _gen_uday17may_bugfix_xlsx.py  _gen_uday_2may2026_xlsx.py  alembic_migrate.py  check_billing_catalog.py  check_critical_path_tags.py  check_encrypted_migration_uses_helpers.py  check_enterprise_stability_gates.py  check_migration_required.py  check_module_coverage.py  commerce_agent_hosted_smoke.py  configure_cmo_vendor_sandbox_connectors.py  consistency_sweep.py  deploy_cloud_run.sh  embedding_rotate.py  full_audit.py  gcp_billing_mtd.py  gen_bug_fix_summary_v2.py  gen_bugfix_08apr.py  gen_bugfix_xlsx.py  gen_pdfs.py  gen_qa_excel.py  generate_24apr_summary_xlsx.py  generate_28apr_summary_xlsx.py  generate_apr_bug_report.py  generate_architecture_doc.py  generate_batch2.py  generate_batch3.py  generate_batch4.py  generate_batch5.py  generate_bug_fix_report.py  generate_bugfix_report.py  generate_bugfix_xlsx.py  generate_complete_user_guide.py  generate_connectors.py  generate_functional_doc.py  generate_may04_bugfix_summary_xlsx.py  generate_product_guide.py  (+25 more)
sdk/: CHANGELOG.md  README.md  pyproject.toml
sdk-ts/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
sdk/agenticorg/: __init__.py  cli.py  client.py
tests/: QA_MANUAL_TEST_PLAN.md  QA_TEST_CASES.md  company_scope.py  conftest.py  e2e_full_production_test.py  final_production_test.py  test_new_features_production.py  test_production_connectors.py
ui/: eslint.config.js  index.html  nginx.cloudrun.conf.template  nginx.conf  package-lock.json  package.json  playwright.config.ts  (+5 more)
(+1337 files in other folders)
