[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "auth", "connectors", "workflows", "scaling", "observability", "audit", "schemas"]

[project]
name = "agenticorg"
version = "3.0.0"
description = "AI Virtual Employee Platform — LangGraph agents, 42 connectors (269 tools), Grantex authorization, HITL governance"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "AgenticOrg Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "google-genai>=1.0.0",
    "anthropic>=0.39.0",
    "openai>=1.57.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.36.0",
    "dnspython>=2.7.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-client>=0.21.0",
    "langgraph>=1.1.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "grantex>=0.2.5",
    "langsmith>=0.2.0",
    "pypdf>=5.0.0",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
    "websockets>=14.1",
    "celery[redis]>=5.4.0",
    "pgvector>=0.3.6",
    "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "testcontainers[postgres,redis]>=4.8.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN"]
ignore = ["S101", "S104", "S105", "S106", "S311", "S324", "T201"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "Depends"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = "--cov=core --cov=api --cov=auth --cov=workflows --cov=scaling --cov-report=xml --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_any_generics = false
check_untyped_defs = true
allow_redefinition = true
warn_return_any = false
disable_error_code = ["union-attr", "attr-defined", "assignment", "arg-type", "return-value", "type-var", "import-untyped", "misc"]

[[tool.mypy.overrides]]
module = ["scripts.*", "tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["connectors.*"]
ignore_errors = true
