[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "auth", "connectors", "workflows", "scaling", "observability", "audit", "schemas"]

[project]
name = "agenticorg"
version = "4.8.0"
description = "AI Virtual Employee Platform — 50+ LangGraph agents, 1000+ integrations (Composio), 54 native connectors (340+ tools), voice agents, RAG knowledge base, smart LLM routing, industry packs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "AgenticOrg Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "google-genai>=1.73.1",
    "anthropic>=0.96.0",
    "openai>=1.57.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.49.2",
    "dnspython>=2.7.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-otlp>=1.41.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "wrapt>=1.17.3",
    "prometheus-client>=0.21.0",
    "langgraph>=1.1.8",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic>=1.4.1",
    "langchain-openai>=1.1.15",
    "langgraph-checkpoint-postgres>=2.0.0",
    "grantex>=0.3.9",
    "langsmith>=0.7.33",
    "pypdf>=6.10.2",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.17",
    "websockets>=14.1",
    "celery[redis]>=5.4.0",
    "pgvector>=0.3.6",
    "jsonschema>=4.23.0",
    "defusedxml>=0.7.1",
    "fpdf2>=2.8.0",
    "openpyxl>=3.1.0",
    "pywebpush>=2.0.0",
    "authlib>=1.7.0",
    "reportlab>=4.4.10",
    "google-cloud-kms>=3.12.0",
    "fastembed>=0.7.0",
]

[project.optional-dependencies]
v4 = [
    "composio-core>=0.7.21",
    "routellm>=0.2.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.3.0",
    "pytest-timeout>=2.4.0",
    "respx>=0.23.1",
    # Pinned <4.14 because testcontainers[redis]>=4.14 transitively
    # pulls redis>=7, conflicting with celery[redis]>=5.4 (which needs
    # redis<6.5 via kombu 5.6). See CI run 24411076696.
    "testcontainers[postgres,redis]>=4.8.0,<4.14.0",
    "factory-boy>=3.3.3",
    "ruff>=0.15.11",
    "mypy>=1.20.1",
    "bandit>=1.9.4",
    "pre-commit>=4.5.1",
    # Needed by tests that PR-D2 un-skipped (test_pii_redaction,
    # test_v490_reqs). Kept out of the default `project.dependencies`
    # so the wheel stays lean for downstream SDK consumers.
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "composio-core>=0.7.21",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN"]
ignore = ["S101", "S104", "S105", "S106", "S311", "S324", "T201"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "Depends"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E501", "I001", "DTZ011", "B007", "B905", "F841"]
"migrations/*" = ["I001", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
cache_dir = "codex-pytest-cache"
# 60s per test. E2E tests that hang (see CI run 24431646301) fail with a
# traceback pointing to the exact frame instead of stalling the CI job.
# Integration/unit tests should complete in well under 60s each.
timeout = 60
timeout_method = "thread"
addopts = "--basetemp=codex-pytest-basetemp --cov=core --cov=api --cov=auth --cov=workflows --cov=scaling --cov-report=xml --cov-report=term-missing"
# Coverage floor is enforced per-invocation in CI (unit-tests job uses
# --cov-fail-under=55) rather than here. integration-tests/ only runs
# ~13% of tests against the full package, so a global addopts floor
# would falsely fail that job. `scripts/check_module_coverage.py`
# handles per-module floors after the unit run.

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_any_generics = false
check_untyped_defs = true
allow_redefinition = true
warn_return_any = false
disable_error_code = ["union-attr", "attr-defined", "assignment", "arg-type", "return-value", "type-var", "import-untyped", "misc"]

[[tool.mypy.overrides]]
module = ["scripts.*", "tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["connectors.*"]
ignore_errors = true
