[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# UR-Bug-5 (Uday/Ramesh 2026-04-21): `bridge/` ships the on-prem Tally
# WebSocket agent but was missing from the wheel packages list, so
# `pip install agenticorg` gave CA-firm sites the server code with no
# way to install the bridge client. `bridge` now ships in the wheel
# and the `agenticorg-bridge` console script works after pip install.
packages = ["core", "api", "auth", "bridge", "connectors", "workflows", "scaling", "observability", "audit", "schemas"]

[project]
name = "agenticorg"
version = "4.8.0"
description = "AI Virtual Employee Platform — 50+ LangGraph agents, 1000+ integrations (Composio), 54 native connectors (340+ tools), voice agents, RAG knowledge base, smart LLM routing, industry packs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "AgenticOrg Contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.12",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "PyJWT[crypto]>=2.13.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    # Billing checkout is a production request path. Keep the Stripe SDK in
    # base deps so Docker's `pip install .[v4]` image can create Checkout
    # Sessions when STRIPE_SECRET_KEY and price IDs are configured.
    "stripe>=15.2.0",
    "google-genai>=1.75.0",
    "anthropic>=0.109.1",
    "openai>=2.41.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-secret-manager>=2.29.0",
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "dnspython>=2.7.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "wrapt>=1.17.3",
    "prometheus-client>=0.21.0",
    "langgraph>=1.2.5",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "langchain-anthropic>=1.4.4",
    "langchain-openai>=1.3.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "grantex>=0.3.9",
    "langsmith>=0.8.15",
    "pypdf>=6.13.1",
    # S0-06 multimodal RAG (PR-3 2026-04-24): Word document ingestion.
    # Image OCR (pytesseract) and audio transcription (openai-whisper)
    # ship behind feature flags in a follow-up — they need system-level
    # deps (Tesseract binary + ffmpeg) so they can't land until the
    # deploy image updates.
    "python-docx>=1.2.0",
    # SEC-2026-05-15: python-docx pulls lxml transitively. Pin the
    # patched floor for CVE-2026-41066 so resolver drift cannot
    # reinstall vulnerable lxml 6.0.x in CI or production images.
    "lxml>=6.1.1",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.32",
    "websockets>=14.1",
    "celery[redis]>=5.4.0",
    "pgvector>=0.3.6",
    "jsonschema>=4.23.0",
    "defusedxml>=0.7.1",
    "fpdf2>=2.8.0",
    "openpyxl>=3.1.0",
    "pywebpush>=2.0.0",
    "authlib>=1.7.2",
    "reportlab>=4.5.1",
    "google-cloud-kms>=3.13.0",
    "fastembed>=0.8.0",
    # SECURITY 2026-06-13: Pillow is transitively required by fastembed.
    # Keep the patched floor direct so dependency resolution cannot drift
    # back to the vulnerable 10.x/11.x lines.
    "pillow>=12.2.0",
]

[project.optional-dependencies]
v4 = [
    # composio-core==0.7.21 is intentionally excluded from production
    # extras until it supports Pillow>=12.2.0.
    # Python 3.14 is the production container runtime. Presidio
    # 2.2.360+ currently declares Python<3.14, so the production-safe
    # floor is intentionally marker-scoped instead of pretending the
    # latest package can install everywhere.
    "presidio-analyzer>=2.2.359,<2.2.360; python_version >= '3.14'",
    "presidio-analyzer>=2.2.362; python_version < '3.14'",
    "presidio-anonymizer>=2.2.362",
]
bge-m3 = [
    # Heavy in-process BGE-M3 loader. This pulls PyTorch, so it stays out
    # of the production API image; production should use AGENTICORG_TEI_URL.
    "FlagEmbedding>=1.4.0",
]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.3.0",
    "pytest-timeout>=2.4.0",
    "respx>=0.23.1",
    # Pinned <4.14 because testcontainers[redis]>=4.14 transitively
    # pulls redis>=7, conflicting with celery[redis]>=5.4 (which needs
    # redis<6.5 via kombu 5.6). See CI run 24411076696.
    "testcontainers[postgres,redis]>=4.8.0,<4.14.0",
    "factory-boy>=3.3.3",
    "ruff>=0.15.15",
    "mypy>=1.20.2",
    "bandit>=1.9.4",
    "pre-commit>=4.6.0",
    # Needed by tests that PR-D2 un-skipped (test_pii_redaction,
    # test_v490_reqs). Kept out of the default `project.dependencies`
    # so the wheel stays lean for downstream SDK consumers.
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]

[project.scripts]
# UR-Bug-5: CA-firm sites run `agenticorg-bridge` on the client machine
# to tunnel Tally XML calls to the cloud. Exposing the console script
# here so `pip install agenticorg` lands a working entrypoint.
agenticorg-bridge = "bridge.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN"]
ignore = ["S101", "S104", "S105", "S106", "S311", "S324", "T201"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "Depends"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E501", "I001", "DTZ011", "B007", "B905", "F841"]
"migrations/*" = ["I001", "E501"]
# Spend reporter builds aggregate SQL with column names from
# argparse-validated values (period names, provider prefixes). All
# user input arrives as bind parameters; ruff S608 flags any
# f-string in a SQL context regardless.
"core/billing/spend.py" = ["S608"]
# RAG layer interpolates ``rag_embedding_column()`` (a module-level
# constant getter) into SQL to flip between the legacy ``embedding``
# column and the new ``embedding_bge_m3`` column without a deploy.
# All values reaching the SQL string are constants under our control;
# bind parameters carry the actual user input. Ruff/bandit S608 flags
# any f-string in a SQL context, hence the per-file ignore.
"core/embeddings_backfill.py" = ["S608"]
"core/rag/ingest.py" = ["S608"]
"core/seed_knowledge.py" = ["S608"]
"api/v1/knowledge.py" = ["S608"]
# Rewrap job (Foundation #4 iter 3) interpolates table+column names
# from the registered _SCANNERS list (module-level constants) into
# UPDATE/SELECT statements. All row-level inputs land as bind params.
"core/crypto/rewrap.py" = ["S608"]
# Migration helpers (Foundation #5) build dynamic UPDATE/SELECT for
# migration-author-controlled table + column names. Same shape as
# rewrap.py: row-level inputs land as bind params; table/column
# names are constants from the migration source.
"core/crypto/migration_helpers.py" = ["S608"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
cache_dir = "codex-pytest-cache"
# 60s per test. E2E tests that hang (see CI run 24431646301) fail with a
# traceback pointing to the exact frame instead of stalling the CI job.
# Integration/unit tests should complete in well under 60s each.
timeout = 60
timeout_method = "thread"
addopts = "--basetemp=codex-pytest-basetemp --cov=core --cov=api --cov=auth --cov=workflows --cov=scaling --cov-report=xml --cov-report=term-missing"
# Coverage floor is enforced per-invocation in CI (unit-tests job uses
# --cov-fail-under=55) rather than here. integration-tests/ only runs
# ~13% of tests against the full package, so a global addopts floor
# would falsely fail that job. `scripts/check_module_coverage.py`
# handles per-module floors after the unit run.

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_any_generics = false
check_untyped_defs = true
allow_redefinition = true
warn_return_any = false
disable_error_code = ["union-attr", "attr-defined", "assignment", "arg-type", "return-value", "type-var", "import-untyped", "misc"]

[[tool.mypy.overrides]]
module = ["scripts.*", "tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["connectors.*"]
ignore_errors = true
