[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenticorg"
version = "0.3.0"
description = "Python SDK for AgenticOrg - run agents, generate agents/workflows, use KB, A2A, and MCP"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "AgenticOrg Contributors" }]
keywords = ["ai", "agents", "langraph", "grantex", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.0",
    "grantex>=0.2.5",
]

[project.scripts]
agenticorg = "agenticorg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agenticorg"]
